--- a/content/data/config.json
+++ b/content/data/config.json
@@ -18,7 +18,7 @@
                 "style": "link"
             },
             {
-                "label": "Pricing",
+                "label": "Preise",
                 "url": "/pricing",
                 "style": "link"
             },
