--- a/content/data/config.json
+++ b/content/data/config.json
@@ -23,7 +23,7 @@
                 "style": "link"
             },
             {
-                "label": "About",
+                "label": "Über uns",
                 "url": "/about",
                 "style": "link"
             },
