--- a/content/data/config.json
+++ b/content/data/config.json
@@ -8,7 +8,7 @@
     "base_font": "serif",
     "header": {
         "title": "campai",
-        "logo": "/images/campai.svg",
+        "logo": "/images/modern-stegosaurus.svg",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
         "primary_nav_links": [
