--- a/content/data/config.json
+++ b/content/data/config.json
@@ -9,7 +9,7 @@
     "header": {
         "title": "campai",
         "logo": "/images/modern-stegosaurus.svg",
-        "logo_alt": "DIY logo",
+        "logo_alt": "campai",
         "has_primary_nav": true,
         "primary_nav_links": [
             {
