--- a/content/data/config.json
+++ b/content/data/config.json
@@ -5,7 +5,7 @@
     "style": "bold",
     "palette": "blue",
     "mode": "light",
-    "base_font": "sans-serif",
+    "base_font": "serif",
     "header": {
         "title": "campai",
         "logo": "/images/modern-stegosaurus.svg",
