config.json: updated favicon

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -167,5 +167,5 @@
         "anncmnt_id": "new-features"
     },
     "domain": "https://magical-cabbage-1f33c.netlify.app",
-    "favicon": "/images/favicon.png"
+    "favicon": "/images/oceanic-cedar.png"
 }
