--- a/content/data/config.json
+++ b/content/data/config.json
@@ -59,7 +59,7 @@
         ]
     },
     "footer": {
-        "logo": "images/classic/logo.svg",
+        "logo": "/images/icon.svg",
         "logo_alt": "DIY logo",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
