config.json: updated logo_alt in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -60,7 +60,7 @@
     },
     "footer": {
         "logo": "/images/icon.svg",
-        "logo_alt": "DIY logo",
+        "logo_alt": "campai",
         "has_primary_nav": true,
         "primary_nav_title": "Company",
         "primary_nav_links": [
