config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -148,7 +148,7 @@
             },
             {
                 "label": "lorem-ipsum",
-                "url": "#",
+                "url": "https://www.facebook.com/campai",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
