--- a/content/data/config.json
+++ b/content/data/config.json
@@ -147,7 +147,7 @@
                 "new_window": true
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Facebook",
                 "url": "https://www.facebook.com/campai",
                 "style": "link",
                 "has_icon": false,
