--- a/content/data/config.json
+++ b/content/data/config.json
@@ -151,7 +151,7 @@
                 "url": "https://www.facebook.com/campai",
                 "style": "link",
                 "has_icon": false,
-                "icon": "arrow-left",
+                "icon": "facebook",
                 "icon_position": "right",
                 "new_window": false,
                 "no_follow": false,
