--- a/content/data/config.json
+++ b/content/data/config.json
@@ -150,7 +150,7 @@
                 "label": "Facebook",
                 "url": "https://www.facebook.com/campai",
                 "style": "link",
-                "has_icon": false,
+                "has_icon": true,
                 "icon": "facebook",
                 "icon_position": "right",
                 "new_window": false,
