--- a/content/data/config.json
+++ b/content/data/config.json
@@ -154,7 +154,7 @@
                 "icon": "facebook",
                 "icon_position": "right",
                 "new_window": true,
-                "no_follow": false,
+                "no_follow": true,
                 "type": "action"
             }
         ],
