config.json: updated label in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -120,7 +120,7 @@
                 "new_window": true
             },
             {
-                "label": "LinkedIn",
+                "label": "Instagram",
                 "url": "https://www.linkedin.com/",
                 "style": "link",
                 "has_icon": true,
