--- a/content/data/config.json
+++ b/content/data/config.json
@@ -121,7 +121,7 @@
             },
             {
                 "label": "Instagram",
-                "url": "https://www.linkedin.com/",
+                "url": "https://www.instagram.com/campai_vereinssoftware/",
                 "style": "link",
                 "has_icon": true,
                 "icon": "linkedin",
