config.json: updated no_follow in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -126,7 +126,8 @@
                 "has_icon": true,
                 "icon": "linkedin",
                 "icon_position": "center",
-                "new_window": true
+                "new_window": true,
+                "no_follow": true
             },
             {
                 "label": "YouTube",
