config.json: updated url in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -122,7 +122,7 @@
             },
             {
                 "label": "YouTube",
-                "url": "https://www.youtube.com/",
+                "url": "https://www.youtube.com/channel/UC7EhNOOWbukgRPehifLKc3g",
                 "style": "link",
                 "has_icon": true,
                 "icon": "youtube",
