--- a/content/data/config.json
+++ b/content/data/config.json
@@ -127,7 +127,8 @@
                 "has_icon": true,
                 "icon": "youtube",
                 "icon_position": "center",
-                "new_window": true
+                "new_window": true,
+                "no_follow": true
             },
             {
                 "label": "Facebook",
