config.json: updated icon in social_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -115,7 +115,7 @@
                 "url": "https://www.instagram.com/campai_vereinssoftware",
                 "style": "link",
                 "has_icon": true,
-                "icon": "linkedin",
+                "icon": "instagram",
                 "icon_position": "center",
                 "new_window": true,
                 "no_follow": true
