config.json: updated style in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -14,7 +14,7 @@
             {
                 "label": "Vereinsverwaltung",
                 "url": "/features",
-                "style": "link"
+                "style": "primary"
             },
             {
                 "label": "Formulare",
