--- a/content/data/config.json
+++ b/content/data/config.json
@@ -12,7 +12,7 @@
         "has_primary_nav": true,
         "primary_nav_links": [
             {
-                "label": "Vereinsverwaltung",
+                "label": "Verwaltung",
                 "url": "/features",
                 "style": "link"
             },
