--- a/content/data/config.json
+++ b/content/data/config.json
@@ -51,7 +51,7 @@
                 "style": "link"
             },
             {
-                "label": "Get Started",
+                "label": "Login / Registrieren",
                 "url": "/pricing",
                 "style": "primary"
             }
