config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -137,7 +137,7 @@
                 "type": "action"
             }
         ],
-        "content": "&copy; Luckyshot GmbH. All rights reserved. This Jamstack site was created with <a href=\"https://www.stackbit.com/?utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=diy&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
+        "content": "&copy; Luckyshot GmbH. All rights reserved. "
     },
     "announcement": {
         "has_anncmnt": false,
