--- a/content/data/config.json
+++ b/content/data/config.json
@@ -13,7 +13,7 @@
         "primary_nav_links": [
             {
                 "label": "Verwaltung",
-                "url": "/features",
+                "url": "/verwaltung",
                 "style": "link"
             },
             {
