config.json: updated url in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -18,7 +18,7 @@
             },
             {
                 "label": "Formulare",
-                "url": "#",
+                "url": "formulare",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
