--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,6 +28,17 @@
                 "type": "action"
             },
             {
+                "label": "lorem-ipsum",
+                "url": "#",
+                "style": "link",
+                "has_icon": false,
+                "icon": "arrow-left",
+                "icon_position": "right",
+                "new_window": false,
+                "no_follow": false,
+                "type": "action"
+            },
+            {
                 "label": "Preise",
                 "url": "/pricing",
                 "style": "link"
