config.json: updated label in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
                 "type": "action"
             },
             {
-                "label": "lorem-ipsum",
+                "label": "Sponsoring",
                 "url": "#",
                 "style": "link",
                 "has_icon": false,
