config.json: updated url in primary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
             },
             {
                 "label": "Sponsoring",
-                "url": "#",
+                "url": "Sponsoring",
                 "style": "link",
                 "has_icon": false,
                 "icon": "arrow-left",
